Re-enable `RabbitMultiBinderObservationTests`
Spring Boot now has a dedicated `spring-boot-micrometer-tracing-brave` module
to auto-configure Brave tracing
* Remove redundant now `micrometer-tracing-bridge-brave` dependency
* Remove comment for the `@AutoConfigureMetric` from the `RabbitMultiBinderObservationTests`
since test logic does nothing with metrics
* Fix comment for spans in the trace: now Spring Integration handlers are also report
their observation even in binder context